# sender-receiver-glib

./: README.md  meson.build
examples/: examples.gresource.xml  http_downloader.cpp  meson.build
src/: gtkmmstdexec.hpp  meson.build
subprojects/: stdexec.wrap
subprojects/packagefiles/stdexec-patch/: meson.build  meson_options.txt
subprojects/packagefiles/stdexec-patch/include/: meson.build  stdexec_version_config.hpp.in
test/: glib.cpp  meson.build
